--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: digitizeR
-Title: What the Package Does (One Line, Title Case)
+Title: fNIRS digitization cleanup and template creator.
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Samuel",
+           family = "Forbes",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+           email = "samuel.h.forbes@gmail.com",
+           comment = c(ORCID = "0000-0003-1022-4676"))
+Description: When attempting image reconstructed fNIRS, the functions included here allow for the cleanup and template digitization creation from original polhemus digitizations.
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
