--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(align_all_caps_nested)
 export(count_nested_aligned_caps)
 export(find_greatest_alignment)
 export(greatest_alignment)
+export(plot_one_participant)
+export(plot_visual_alignment)
 export(read_in_caps)
 export(read_in_templates)
 export(select_caps_by_npoints)
