--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,32 @@
 
 export("%>%")
 export(adjust_points)
+export(adjust_points2)
 export(align_all_caps_nested)
 export(align_to_template)
+export(align_to_template2)
+export(calc_3d_dist)
+export(calc_dist_and_replace_na)
+export(calc_dist_and_replace_template)
+export(calc_participant_numbers)
 export(count_nested_aligned_caps)
 export(find_greatest_alignment)
 export(greatest_alignment)
+export(headwise_replacement)
+export(iterative_replacement)
 export(make_full_templates)
 export(make_partial_templates)
+export(modified_kabsch)
+export(modified_kabsch2)
 export(plot_one_participant)
 export(plot_template)
 export(plot_visual_alignment)
 export(read_in_caps)
 export(read_in_templates)
+export(replace_nas_with_template)
+export(rezero_caps)
 export(rezero_template)
+export(rezero_template_ind)
 export(save_caps)
 export(save_templates)
 export(select_caps_by_npoints)
