--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(modified_kabsch2)
 export(plot_one_participant)
 export(plot_template)
 export(plot_visual_alignment)
+export(prepare_and_make_templates)
 export(read_in_caps)
 export(read_in_templates)
 export(replace_nas_with_template)
@@ -32,4 +33,5 @@ export(save_caps)
 export(save_templates)
 export(select_caps_by_npoints)
 export(select_caps_without_npoints)
+export(threestep_alignment)
 importFrom(magrittr,"%>%")
