--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,12 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Depends:
+    dplyr,
+    stringr,
+    plotly
 Imports: 
     magrittr,
-    dplyr,
     tidyr,
     knitr,
-    stringr,
-    plotly,
     forcats
